--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -1,12 +1,12 @@
 // primary colors
 $light-color: #f0f0f0;
-$dark-color: #222222;
+$dark-color: #1d1f21;
 $grey-color: #747474;
-$accent-color: #3498db;
+$accent-color: #03957d;
 $dark-bg: #1d1f21;
 
 // name display
-$title-size: 6rem;
+$title-size: 5.5rem;
 // typewriter display
 $subtitle-size: 2.4rem;
 
