--- a/src/styles/scss/layout/_header.scss
+++ b/src/styles/scss/layout/_header.scss
@@ -3,12 +3,13 @@ header {
   height: 100%;
   width: 100%;
   background: no-repeat center center fixed;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(../../assets/images/header-background.jpg);
+  // background-image: linear-gradient(
+  //     to right bottom,
+  //     rgba(0, 0, 0, 0.5),
+  //     rgba(0, 0, 0, 0.5)
+  //   ),
+  //   url(../../assets/images/header-background.jpg);
+  background-color: $dark-bg;
   background-size: cover;
   -webkit-background-size: cover;
   text-align: center;
@@ -31,7 +32,7 @@ header {
 
   .active-nav {
     a {
-      color: $accent-color !important;
+      @include thick-underline(0.2rem);
     }
   }
 
