--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,5 +1,6 @@
 @import "./abstract/variables";
 @import "./abstract/mixins";
+@import "./abstract/mediaqueries";
 
 @import "./base/base";
 @import "./base/typography";
