--- a/src/styles/scss/components/_arrow.scss
+++ b/src/styles/scss/components/_arrow.scss
@@ -4,11 +4,11 @@
   left: 0;
   right: 0;
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
 
   .arrow-icon {
-    margin: auto;
+    margin: 0 auto;
     a {
       color: $light-color;
     }
