--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -16,13 +16,17 @@ $font-size-lg: 1.5rem;
 $social-size: 1.5rem;
 
 // fonts (imported in index.html)
-$heading-font: "Rubik", sans-serif;
+$heading-font: "Freight Text Bold", serif;
 $body-font: "Karla", sans-serif;
+// $body-font: "Freight Text Book", sans-serif;
 
 // spacing
 $spacer: 2rem;
 $spacer-sm: 1rem;
 $spacer-lg: 4rem;
+
+// max height for logo
+$logo-height: 1.8rem;
 
 // about me pic
 $profile-pic-height: 300px;
