bg color and typo

--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -1,9 +1,9 @@
 // primary colors
 $light-color: #f0f0f0;
-$dark-color: #1d1f21;
+$dark-color: #1b1b1b;
 $grey-color: #747474;
 $accent-color: #03957d;
-$dark-bg: #1d1f21;
+$dark-bg: #1b1b1b;
 
 // name display
 $title-size: 5.2rem;
