--- a/src/styles/scss/abstract/_mixins.scss
+++ b/src/styles/scss/abstract/_mixins.scss
@@ -11,4 +11,5 @@
   text-decoration-color: $accent-color;
   text-decoration-thickness: $thickness;
   padding-bottom: $spacer;
+  text-underline-position: under;
 }
