mobile display text size

--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -13,6 +13,7 @@ $subtitle-size: 2.4rem;
 // font sizes
 $font-size-sm: 0.8rem;
 $font-size-lg: 1.5rem;
+$font-size-xl: 2.3rem;
 $social-size: 1.5rem;
 
 // fonts (imported in index.html)
