--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -30,6 +30,23 @@ body {
   background-color: $dark-bg;
 }
 
+.btn,
+.btn-resume,
+.btn-submit,
+.btn-success {
+  background-color: $accent-color;
+  border-color: transparent;
+
+  color: $light-color;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: darken($accent-color, 8%);
+    color: darken($light-color, 5%);
+  }
+}
+
 .test {
   border: 2px solid red;
 }
