--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -12,6 +12,7 @@ $subtitle-size: 2.4rem;
 
 // font sizes
 $font-size-sm: 0.8rem;
+$font-size-md: 1rem;
 $font-size-lg: 1.5rem;
 $font-size-xl: 2.3rem;
 $social-size: 1.5rem;
@@ -30,7 +31,7 @@ $spacer-lg: 4rem;
 $logo-height: 1.8rem;
 
 // about me pic
-$profile-pic-height: 300px;
+$profile-pic-height: 150px;
 $profile-pic-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
   0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
