--- a/src/styles/scss/layout/_header.scss
+++ b/src/styles/scss/layout/_header.scss
@@ -18,6 +18,10 @@ header {
     color: $light-color;
   }
 
+  #navbar-nav {
+    margin-top: $space-lg;
+  }
+
   .navbar-brand {
     font-size: $font-size-lg;
   }
