--- a/src/styles/scss/abstract/_mediaqueries.scss
+++ b/src/styles/scss/abstract/_mediaqueries.scss
@@ -2,4 +2,12 @@
   #typewriter {
     font-size: $font-size-xl;
   }
+
+  #about-content {
+    padding: 0.5rem;
+  }
+
+  #bio {
+    font-size: $font-size-lg;
+  }
 }
