--- a/src/styles/scss/pages/_about.scss
+++ b/src/styles/scss/pages/_about.scss
@@ -15,8 +15,8 @@
     margin-right: $spacer-sm;
   }
 
-  .tagline {
-    font-size: $font-size-lg;
+  .section-header {
+    padding: $spacer;
   }
 
   #bio {
