improved mobile responsiveness for sections, filters, and footer

--- a/src/styles/scss/layout/_section.scss
+++ b/src/styles/scss/layout/_section.scss
@@ -11,25 +11,11 @@ section {
     margin: $spacer-lg auto;
 
     .flex-col {
-      padding: $spacer;
+      padding: $spacer-sm;
     }
   }
 
   .list-group-item {
     background-color: inherit;
-  }
-}
-
-.filters {
-  a {
-    padding: $spacer;
-  }
-
-  .filter {
-    margin: 0 auto;
-  }
-
-  .active {
-    color: $accent-color;
   }
 }
