--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -2,9 +2,7 @@
   #typewriter {
     font-size: 2.3rem; }
   #about-content {
-    padding: 0.5rem; }
-  #bio {
-    font-size: 1.5rem; } }
+    padding: 0.5rem; } }
 
 *,
 *::after,
@@ -128,18 +126,9 @@ section {
     padding: 1rem;
     margin: 4rem auto; }
     section .container-fluid .flex-col {
-      padding: 2rem; }
+      padding: 1rem; }
   section .list-group-item {
     background-color: inherit; }
-
-.filters a {
-  padding: 2rem; }
-
-.filters .filter {
-  margin: 0 auto; }
-
-.filters .active {
-  color: #03957d; }
 
 header {
   position: relative;
@@ -391,3 +380,19 @@ header {
   .btn--color:active {
     background-color: #026d5b;
     color: #e3e3e3; }
+
+.filters a {
+  padding: 1rem; }
+
+.filters .filter {
+  margin: 0 auto; }
+
+.filters .active {
+  color: #03957d; }
+
+.list-inline {
+  white-space: nowrap;
+  overflow-x: hidden; }
+
+.list-inline-item {
+  padding: 0.2rem 0; }
