--- a/src/styles/scss/base/_typography.scss
+++ b/src/styles/scss/base/_typography.scss
@@ -68,6 +68,36 @@ a {
   }
 }
 
+.arrow-icon {
+  i {
+    // text-transform: uppercase;
+    // color: $grey-color;
+    // font-weight: bold;
+    position: relative;
+    // display: inline-block;
+    overflow: hidden;
+    background: linear-gradient(
+      to right,
+      $accent-color,
+      $accent-color 50%,
+      $grey-color 50%
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    background-position: 100%;
+    transition: background-position 0.5s ease;
+
+    &:hover {
+      cursor: pointer;
+      text-decoration: none;
+      // color: $accent-color;
+      background-position: 0 100%;
+    }
+  }
+}
+
 .section-header {
   @include thick-underline(0.375rem);
 }
