--- a/src/styles/scss/pages/_contact.scss
+++ b/src/styles/scss/pages/_contact.scss
@@ -10,6 +10,11 @@
 
   .contact-content {
     padding: $spacer-sm;
+    margin-top: $spacer;
+  }
+
+  .list-group {
+    padding: 0 $spacer-lg;
   }
 
   .arrow-container {
