--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -38,3 +38,6 @@ $profile-pic-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
 // skill bars gradient colors
 $level-color-1: #f12711;
 $level-color-2: #f5ba19;
+
+// timeline
+$border-thickness: 5px;
