refactoring scss and link and hover effects:

--- a/src/styles/scss/abstract/_mixins.scss
+++ b/src/styles/scss/abstract/_mixins.scss
@@ -12,3 +12,10 @@
   text-decoration-thickness: $thickness;
   text-underline-position: under;
 }
+
+@mixin nav-item {
+  font-size: $font-size-sm;
+  color: $light-color;
+  text-transform: uppercase;
+  font-weight: 600;
+}
