--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -44,13 +44,6 @@ body {
   src: url("../../assets/fonts/Freight Text/Freight Text Bold.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Freight Text/Freight Text Bold.woff") format("woff"), url("../../assets/fonts/Freight Text/Freight Text Bold.ttf") format("truetype");
   /* Safari, Android, iOS */ }
 
-@font-face {
-  font-family: "Freight Sans Book";
-  src: url("../../assets/fonts/Freight Text Sans/FreightSansBook.eot");
-  /* IE9 Compat Modes */
-  src: url("../../assets/fonts/Freight Text Sans/FreightSansBook.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/Freight Text Sans/FreightSansBook.woff") format("woff"), url("../../assets/fonts/Freight Text Sans/FreightSansBook.ttf") format("truetype");
-  /* Safari, Android, iOS */ }
-
 html,
 body,
 #app {
@@ -58,21 +51,41 @@ body,
   font-weight: 400;
   color: #f0f0f0; }
 
-h1 {
+h1, .section-heading {
   font-family: "Freight Text Bold", serif; }
 
 h2, h3 {
   text-transform: uppercase;
-  color: #747474; }
+  color: #747474;
+  font-family: "Karla", sans-serif; }
 
 h2 {
-  font-family: "Karla", sans-serif;
   font-size: 1.6rem; }
 
 h3 {
-  font-family: "Karla", sans-serif;
   font-size: 1.2rem;
   font-weight: bold; }
+
+.section-heading {
+  text-decoration: underline;
+  text-decoration-color: #03957d;
+  text-decoration-thickness: 0.375rem;
+  text-underline-position: under;
+  text-align: center; }
+
+p {
+  font-family: "Karla", sans-serif;
+  font-size: 1rem;
+  font-weight: 300; }
+
+.banner-text .display-text {
+  font-size: 5.2rem;
+  color: #f0f0f0; }
+
+.banner-text #greeting {
+  color: #03957d;
+  font-weight: bold;
+  letter-spacing: -0.03rem; }
 
 a {
   text-transform: uppercase;
@@ -81,50 +94,19 @@ a {
     font-weight: 600; }
   a:hover {
     cursor: pointer;
-    text-decoration: none;
-    color: #03957d; }
-
-.section-header {
-  text-decoration: underline;
-  text-decoration-color: #03957d;
-  text-decoration-thickness: 0.375rem;
-  text-underline-position: under;
-  text-align: center; }
-
-.subheading {
-  text-align: center; }
-
-p {
-  font-family: "Karla", sans-serif;
-  font-weight: 300; }
+    text-decoration: none; }
+    a:hover:not(.btn--color) {
+      color: #03957d; }
 
 .nav-item {
-  font-family: "Karla", sans-serif;
-  text-transform: uppercase;
-  font-weight: 600;
   font-size: 0.8rem;
-  color: #f0f0f0; }
-  .nav-item #btn--blog {
-    text-transform: inherit;
-    font-size: inherit;
-    color: inherit;
-    font-weight: inherit; }
-
-.banner-text {
-  color: #f0f0f0; }
-  .banner-text .display-text {
-    font-size: 5.2rem; }
-  .banner-text .greeting-subtitle {
-    color: #03957d;
-    font-weight: bold;
-    letter-spacing: -0.03rem;
-    font-size: 1.5rem; }
-
-.footer {
-  font-size: 0.8rem; }
+  color: #f0f0f0;
+  text-transform: uppercase;
+  font-weight: 600; }
 
 .hover-effect {
-  position: relative; }
+  position: relative;
+  padding-bottom: 0; }
   .hover-effect:before, .hover-effect:after {
     content: "";
     position: absolute;
@@ -166,20 +148,14 @@ header {
   background-size: cover;
   -webkit-background-size: cover;
   text-align: center; }
-  header a:link {
-    color: #f0f0f0; }
-  header #navbar-nav {
-    margin-top: 1rem; }
   header .navbar-brand {
-    font-size: 1.5rem; }
-  header #FirstName {
-    color: #f0f0f0; }
-  header #LastName {
-    color: #03957d; }
+    font-size: 1.6rem; }
+    header .navbar-brand #FirstName {
+      color: #f0f0f0; }
+    header .navbar-brand #LastName {
+      color: #03957d; }
   header #Logo {
     max-height: 1.8rem; }
-  header #btn--blog {
-    transform: translateY(0.4rem); }
   header .active-nav a,
   header .active-nav a:hover {
     text-decoration: underline;
@@ -203,16 +179,10 @@ header {
 .footer {
   background-color: #1b1b1b;
   padding: 1rem; }
-  .footer a i:link {
-    color: #f0f0f0; }
-  .footer a i:hover {
-    color: #03957d; }
+  .footer p {
+    font-size: 0.8rem; }
   .footer #username {
     text-transform: lowercase; }
-    .footer #username a:link {
-      color: #f0f0f0; }
-    .footer #username a:hover {
-      color: #03957d; }
   .footer .social-item i {
     font-size: 1.5rem;
     padding: 0 2rem; }
@@ -229,9 +199,9 @@ header {
     padding: 2rem; }
   #about #bio {
     text-align: justify;
-    font-size: 1rem;
     padding: 1rem; }
   #about #about-content {
+    margin: 4rem auto;
     line-height: 1.6rem;
     padding: 1rem;
     border-left: 5px solid rgba(3, 149, 125, 0.3);
@@ -298,7 +268,7 @@ header {
 #contact .arrow-container {
   padding: 1rem; }
 
-#contact .section-header {
+#contact .section-heading {
   padding: 0;
   margin: 0; }
 
@@ -418,14 +388,24 @@ header {
     background-color: #026d5b;
     color: #e3e3e3; }
 
-.filters a {
-  padding: 1rem; }
+#btn--blog {
+  font-size: 0.8rem;
+  color: #f0f0f0;
+  text-transform: uppercase;
+  font-weight: 600; }
 
-.filters .filter {
-  margin: 0 auto; }
-
-.filters .active {
-  color: #03957d; }
+.filters {
+  margin: 2rem auto; }
+  .filters a {
+    padding: 1rem; }
+  .filters .filter {
+    margin: 0 auto; }
+  .filters .active {
+    color: #f0f0f0;
+    text-decoration: underline;
+    text-decoration-color: #03957d;
+    text-decoration-thickness: 0.2rem;
+    text-underline-position: under; }
 
 .list-inline {
   white-space: nowrap;
