--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -5,15 +5,14 @@ $grey-color: #747474;
 $accent-color: #03957d;
 $dark-bg: #1b1b1b;
 
-// name display
+// main display
 $title-size: 5.2rem;
-// typewriter display
-$subtitle-size: 2.4rem;
 
 // font sizes
 $font-size-sm: 0.8rem;
-$font-size-md: 1rem;
-$font-size-lg: 1.5rem;
+$font-size-base: 1rem;
+$font-size-md: 1.2rem;
+$font-size-lg: 1.6rem;
 $font-size-xl: 2.3rem;
 $social-size: 1.5rem;
 
